infra/k8s/delivery-service.yaml
# delivery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: microservices-arch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service
        image:  vihanm0120/microservices-arch-delivery-service:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: microservices-arch
spec:
  selector:
    app: delivery-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
